@@ -1,190 +1,142 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.github.kt3k.coveralls'
-apply plugin: 'org.jetbrains.dokka'
-apply plugin: 'jacoco-android'
-
-jacoco {
-    toolVersion = "0.8.5"
+plugins {
+  id 'com.android.library'
+  id 'org.jetbrains.kotlin.android'
+  id 'jacoco'
 }
 
+jacoco { toolVersion = '0.8.10' }
+
 android {
+  namespace 'org.smartregister.chw.referral'
+  compileSdk 35
+  buildToolsVersion '35.0.0'
 
-    compileSdkVersion 29
-    buildToolsVersion androidBuildToolsVersion
+  buildFeatures { buildConfig true; viewBinding true }
 
-    defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-        multiDexEnabled true
+  compileOptions { sourceCompatibility JavaVersion.VERSION_1_8; targetCompatibility JavaVersion.VERSION_1_8 }
+  // Keep Kotlin target aligned with Java target to avoid AGP/KGP validation errors
+  kotlinOptions { jvmTarget = '1.8' }
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
+  defaultConfig {
+    minSdk 28
+    targetSdk 35
+    versionCode Integer.parseInt(project.VERSION_CODE)
+    versionName project.VERSION_NAME
+    multiDexEnabled true
+    testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+    consumerProguardFiles 'consumer-rules.pro'
+  }
+
+  buildTypes {
+    release { minifyEnabled false; proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro' }
+    debug   { debuggable true }
+  }
+
+  lint { abortOnError false }
+
+  packaging { resources { excludes += [
+    'LICENSE.txt','META-INF/LICENSE','META-INF/LICENSE.txt','META-INF/license.txt','META-INF/NOTICE.txt','META-INF/notice.txt','META-INF/ASL2.0','META-INF/INDEX.LIST','org/apache/http/version.properties','org/apache/http/client/version.properties'
+  ] } }
+
+  testOptions {
+    unitTests {
+      includeAndroidResources = true
+      all {
+        jvmArgs '-Xmx1024m'
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.net=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.text=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.security=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/jdk.internal.util=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/sun.security.util=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED'
+        jvmArgs '--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
+        systemProperty 'robolectric.dependency.repo.url', 'https://repo1.maven.org/maven2'
+        systemProperty 'robolectric.enabledSdks', '28'
+      }
     }
+    animationsDisabled = true
+  }
+}
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-        debug {
-            testCoverageEnabled true
-            minifyEnabled false
-            useProguard false
-        }
-    }
-    dexOptions {
-        javaMaxHeapSize "4g"
-    }
-
-    lintOptions {
-        abortOnError false
-    }
-
-    // avoid errors with message 'Duplicate files copied in APK ...'
-    packagingOptions {
-        exclude 'LICENSE.txt'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/ASL2.0'
-        exclude 'org/apache/http/version.properties'
-        exclude 'org/apache/http/client/version.properties'
-    }
-
-    testOptions {
-        unitTests {
-            includeAndroidResources = true
-            returnDefaultValues = true
-        }
-        unitTests.all {
-            jacoco {
-                includeNoLocationClasses = true
-            }
-        }
-        animationsDisabled = true
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    dataBinding {
-        enabled = true
-    }
-
+tasks.withType(Test).configureEach {
+  jacoco { includeNoLocationClasses = true; excludes = ['jdk.internal.*'] }
 }
 
 dependencies {
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+  // Core OpenSRP and related
+  implementation('io.github.bluecodesystems:opensrp-client-core:6.2.2') { transitive = true }
+  implementation('com.github.BlueCodeSystems:android-p2p-sync:v0.4.3') { transitive = true }
+  implementation('com.github.BlueCodeSystems:opensrp-client-configurable-views:v2.0.1') { transitive = true }
+  // Neat Form from JitPack
+  api 'com.github.BlueCodeSystems:neat-form:v1.1.6'
+  // Plan Evaluator provides domain classes like PhysicalLocation, Task
+  api 'io.github.bluecodesystems:opensrp-plan-evaluator:1.7.0'
 
-    api('org.smartregister:opensrp-client-core:1.11.5-SNAPSHOT@aar') {
-        transitive = true
-        exclude group: 'com.github.bmelnychuk', module: 'atv'
-        exclude group: 'com.google.guava', module: 'guava'
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-        exclude group: 'com.android.support', module: 'design'
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-        exclude group: 'com.rengwuxian.materialedittext', module: 'library'
-    }
+  // AndroidX widgets (modern)
+  implementation 'androidx.appcompat:appcompat:1.6.1'
+  implementation 'androidx.recyclerview:recyclerview:1.3.2'
+  implementation 'com.google.android.material:material:1.12.0'
+  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+  implementation 'androidx.multidex:multidex:2.0.1'
+  implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+  implementation 'androidx.core:core-ktx:1.13.1'
 
-    api("org.smartregister:android-p2p-sync:0.3.7-SNAPSHOT") {
-        exclude group: 'com.google.guava', module: 'guava'
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-        exclude group: 'org.apache.httpcomponents', module: 'httpmime'
-        exclude group: 'org.smartregister', module: 'opensrp-client-native-form'
-    }
+  implementation 'com.google.code.reflection-utils:reflection-utils:0.0.1'
+  implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+  implementation 'com.google.code.gson:gson:2.10.1'
+  implementation 'org.apache.commons:commons-lang3:3.12.0'
+  implementation 'org.apache.commons:commons-text:1.10.0'
+  implementation 'de.hdodenhof:circleimageview:3.1.0'
+  implementation 'com.google.guava:guava:20.0'
+  // If needed, add Compressor back with a Central-hosted version.
+  implementation 'com.wdullaer:materialdatetimepicker:3.6.4'
 
-    api("com.nerdstone:neat-form-core:1.1.2") {
-        transitive = true
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-        exclude group: 'androidx.appcompat', module: 'appcompat'
-        exclude group: 'androidx.constraintlayout', module: 'constraintlayout'
-    }
+  // Koin 3.x (we updated imports to KoinComponent from org.koin.core.component.*)
+  implementation "io.insert-koin:koin-android:3.5.6"
 
-    // Koin for Android dependency injection
-    api "org.koin:koin-android:$koinVersion"
-    api "org.koin:koin-androidx-scope:$koinVersion"
-    api "org.koin:koin-androidx-viewmodel:$koinVersion"
+  // Unit test
+  testImplementation 'junit:junit:4.13.2'
+  testImplementation 'org.robolectric:robolectric:4.10.3'
+  testImplementation 'androidx.test:core:1.5.0'
+  testImplementation 'org.mockito:mockito-core:4.8.1'
+  testImplementation 'org.mockito:mockito-inline:4.8.1'
+  testImplementation 'org.json:json:20231013'
+  testImplementation 'io.mockk:mockk:1.9.3'
+  testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
+  testImplementation 'com.agoda.kakao:kakao:2.2.0'
+  testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
-    implementation('org.smartregister:opensrp-client-configurable-views:1.1.5-SNAPSHOT@aar') {
-        transitive = true
-        exclude group: 'org.smartregister', module: 'opensrp-client-core'
-        exclude group: 'org.smartregister', module: 'opensrp-client-native-form'
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-    }
+  // Instrumentation
+  androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+  androidTestImplementation 'androidx.test:runner:1.5.2'
 
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation "androidx.core:core-ktx:1.3.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-    // compatibility issue when upgraded to 1.1.*
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.2'
-    // compatibility issue when upgraded to 1.1.*
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.code.reflection-utils:reflection-utils:0.0.1'
-    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-    // compatibility issue when upgraded to 2.2.*
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    // compatibility issue when upgraded to 24.*
-    implementation 'com.google.guava:guava:20.0'
-    implementation 'id.zelory:compressor:1.0.4'
-    implementation 'com.wdullaer:materialdatetimepicker:3.6.4'
-    implementation "androidx.core:core-ktx:1.3.1"
-
-    testImplementation "org.koin:koin-test:$koinVersion"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.robolectric:robolectric:4.3.1'
-    testImplementation "org.robolectric:shadows-multidex:4.3.1"
-    testImplementation 'androidx.test:core:1.2.0'
-    testImplementation "io.mockk:mockk:1.9.3"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
-    testImplementation 'com.agoda.kakao:kakao:2.2.0'
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-
-    annotationProcessor 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
-
-    configurations.all {
-        resolutionStrategy.force 'com.android.support:support-annotations:23.1.0'
-    }
+  annotationProcessor 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
 }
 
-tasks.coveralls {
-    dependsOn 'jacocoTestReport'
-}
-
-coveralls {
-    jacocoReportPath = "${buildDir}/reports/jacoco/jacocoTestDebugUnitTestReport/jacocoTestDebugUnitTestReport.xml"
-}
-
-//For Kotlin documentation more here https://github.com/Kotlin/dokka/blob/master/README.md
-dokka {
-    outputFormat = 'html'
-    outputDirectory = "$buildDir/dokka"
-
-    configuration {
-        moduleName = 'opensrp-chw-referral'
-        reportUndocumented = true
-        // Suppress a package
-        perPackageOption {
-            prefix = "kotlin.internal" // will match kotlin.internal and all sub-packages of it
-            suppress = true
-        }
-    }
-
+// Jacoco report (modern DSL)
+tasks.register('jacocoTestReport', JacocoReport) {
+  dependsOn 'testDebugUnitTest'
+  reports {
+    xml.required = true; html.required = true
+    xml.outputLocation = file("${buildDir}/reports/jacoco/jacocoRootReport/merged.xml")
+    html.outputLocation = file("${buildDir}/reports/jacoco/jacocoRootReport/html")
+  }
+  def fileFilter = ['**/R.class','**/R$*.class','**/BuildConfig.*','**/Manifest*.*','**/*Test*.*','android/**/*.*','**/*$ViewBinder*.*']
+  def debugTree = fileTree(dir: "$buildDir/intermediates/javac/debug/classes", excludes: fileFilter)
+  def mainSrc = "$project.projectDir/src/main/java"
+  sourceDirectories.setFrom(files([mainSrc]))
+  classDirectories.setFrom(files([debugTree]))
+  executionData.setFrom(fileTree(dir: buildDir, includes: ['jacoco/testDebugUnitTest.exec', 'outputs/code-coverage/connected/*coverage.ec']))
 }
 
 apply from: '../maven.gradle'
-
